# harness-claude-code

./: README.md
.claude-plugin/: marketplace.json  plugin.json
agents/: architect.md  code-reviewer.md  e2e-author.md  e2e-runner.md  engineer.md  product-owner.md  security-reviewer.md  sre.md  ui-ux-designer.md
commands/: close-pr.md  close-task-issue.md  create-agent.md  create-skill.md  deep-dive-feature.md  implement-feature.md  pickup-failed-pr-for-fix.md  pickup-pr-for-review.md  pickup-reviewed-pr.md  pickup-reviewed-task-for-fix.md  pickup-slice-for-implement.md  pickup-task-for-implement.md  pickup-task-for-implementation.md  pickup-task-for-review.md  prepare-slice-branch.md
docs/: modes.html
hooks/: engineer-pre-push.sh  hooks.json  post-edit-checks.sh  post-edit-dockerfile.sh  post-push-ci-status.sh
skills/author-e2e-tests/: SKILL.md
skills/close-pr/: SKILL.md
skills/close-task-issue/: SKILL.md
skills/coding-patterns/: SKILL.md
skills/create-draft-pr/: SKILL.md
skills/create-issues/: SKILL.md
skills/database-patterns/: SKILL.md
skills/design-api-endpoint/: SKILL.md
skills/design-deep-module/: SKILL.md
skills/docker-patterns/: SKILL.md
skills/fix-e2e-tests/: SKILL.md
skills/fix-pr/: SKILL.md
skills/fix-pr-blockers/: SKILL.md
skills/fix-task-feedback/: SKILL.md
skills/fix-task-issue/: SKILL.md
skills/frontend-patterns/: SKILL.md
skills/git-workflow/: SKILL.md
skills/implement-feature-task/: SKILL.md
skills/scaffold-project/templates/python-fastapi/: .dockerignore  Dockerfile  pyproject.toml
(+116 files in other folders)
